<resources>
    <string name="app_name">ADAS</string>
    <string name="run_button">Run</string>
    <string name="stop_button">Stop</string>
    <string name="settings_button">Settings</string>
    <string name="running_functions">Running Functions:</string>
    <string name="action_settings">Settings</string>
    <string name="video">video</string>
    <string name="image">image</string>
    <string name="camera_settings">Camera Settings</string>
    <string name="computer_vision">Computer Vision</string>
    <string name="vehicle_detection">Vehicle Detection</string>
    <string name="lane_detection">Lane Detection</string>
    <string name="people_detection">People Detection</string>
    <string name="color_conversion">Color Conversion</string>
</resources>
