<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <org.opencv.android.JavaCameraView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        android:id="@+id/MainActivityCameraView"
        opencv:show_fps="true"
        opencv:camera_id="any"
        android:layout_weight="1" />
    <TextView android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/running_functions" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle" >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/run_button"
            android:id="@+id/runButton"
            android:layout_gravity="center_horizontal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight=".33" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/stop_button"
            android:id="@+id/stopButton"
            android:layout_gravity="center_horizontal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight=".33" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/settings_button"
            android:id="@+id/settingsButton"
            android:layout_gravity="center_horizontal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight=".33" />
    </LinearLayout>
</LinearLayout>